vector is deleted, because we use meschach library. function is added for supporting function. Root of grammar is program.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 TARGET = compiler
 CC = gcc
 
-$(TARGET): lex.yy.c simple.tab.c simple.h intList.c intList.h node.h node.c type.h type.c statementList.h statementList.c interpreter.h interpreter.c symbol.h symbol.c vector.h vector.c meschach.a
-	$(CC) -o $(TARGET) lex.yy.c simple.tab.c intList.c node.c type.c statementList.c interpreter.c symbol.c vector.c -lfl meschach.a -lm
+$(TARGET): lex.yy.c simple.tab.c simple.h intList.c intList.h node.h node.c type.h type.c statementList.h statementList.c interpreter.h interpreter.c symbol.h symbol.c function.h function.c meschach.a
+	$(CC) -o $(TARGET) lex.yy.c simple.tab.c intList.c node.c type.c statementList.c interpreter.c symbol.c function.c -lfl meschach.a -lm
 
 clean:
 	rm $(TARGET) lex.yy.c simple.tab.c simple.tab.h meschach.a
